fixed spacing in recipe details

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -39,4 +39,10 @@ section {
     line-height: 0;
 }
 
+.content ol,
+.content ul {
+    list-style-position: inside !important;
+    margin-left: 0 !important;
+}
+
 @import "../../node_modules/bulma/bulma.sass";
